# vpn4j

./: .gitignore  README.md
docs/: CLEANROOM.md  JNI.md  MEMORY.md  README.md  RUNTIMES.md
scripts/: build-native.sh
vpn4j/: pom.xml
vpn4j-cli/: pom.xml
vpn4j-cli/examples/: smoke-a.conf
vpn4j-cli/java/src/com/github/vpn4j/cli/: Vpn4jCli.java
vpn4j-cli/java/test/com/github/vpn4j/cli/: Vpn4jCliTest.java
vpn4j-native/: CMakeLists.txt  Dockerfile  README.md  docker-build.sh  docker-compose.yml
vpn4j-native/include/vpn4j/: status.hpp  tun_device.hpp
vpn4j-native/src/: status.cpp  tun_device.cpp  vpn4j_jni.cpp
vpn4j-native/tests/: test_status.cpp
vpn4j-pom/: pom.xml
vpn4j/java/src/com/github/vpn4j/: Vpn4j.java
vpn4j/java/src/com/github/vpn4j/config/: DeviceConfig.java  PeerConfig.java  TransportMode.java  WgConfig.java  WgConfigParser.java  WgConfigs.java
vpn4j/java/src/com/github/vpn4j/crypto/: Blake2s.java  Bytes.java  ChaCha20Poly1305.java  HChaCha20.java  Hkdf.java  Key.java  KeyPair.java  Keys.java  Tai64n.java  X25519.java  XChaCha20Poly1305.java
vpn4j/java/src/com/github/vpn4j/device/: Device.java  NativeTunPort.java  TunDevice.java
vpn4j/java/src/com/github/vpn4j/engine/: DeviceEngine.java  ManualClock.java  NanoClock.java  PeerEngine.java  SessionTimers.java
vpn4j/java/src/com/github/vpn4j/nativeapi/: NativeBootstrap.java  NativeLoadException.java  TunNative.java
vpn4j/java/src/com/github/vpn4j/protocol/: AllowedIpsTable.java  Cidr.java  CookieChecker.java  DataPacket.java  MessageSizes.java  MessageType.java  NoiseHandshake.java  NoiseLengths.java  PacketPadding.java  ProtocolConstants.java  ProtocolTimers.java  ReplayWindow.java  TransportKeys.java  TransportSession.java
vpn4j/java/src/com/github/vpn4j/transport/: CarrierFactory.java  InMemoryCarrierPair.java  PacketCarrier.java  TcpTunnelCarrier.java  UdpCarrier.java
vpn4j/java/src/com/github/vpn4j/tun/: MemoryTunPort.java  TunPort.java
vpn4j/java/test/com/github/vpn4j/: Vpn4jTest.java
vpn4j/java/test/com/github/vpn4j/config/: DeviceConfigTest.java  (+3 more)
(+58 files in other folders)
